# voe-dl

./: .gitignore  BUILD.md  CHANGELOG.md  README.md  dl.py  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
voe_dl/: __init__.py  __main__.py  abort.py  bait.py  cli.py  decoding.py  downloader.py  http_client.py  naming.py  piping.py
voe_dl/sources/: __init__.py  iframe_fallback.py  method1_var_sources.py  method2_script_patterns.py  method3_video_tags.py  method4_regex_urls.py  method5_base64_blobs.py  method6_a168c.py  method7_mkgma.py  method8_obfuscated_json.py
