[project]
name = "voe-dl"
version = "1.8.1"
description = "Multi-threaded downloader for voe.sx and similar video hosting sources"
readme = "README.md"
license = { text = "GPL-3.0-only" }
requires-python = ">=3.8"
dependencies = [
    "requests",
    "beautifulsoup4",
    "yt-dlp",
    "wget",
]

[project.scripts]
voe-dl = "dl:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = ["dl.py"]

[dependency-groups]
dev = [
    "pyinstaller>=6.21.0",
]
