[project]
name = "voe-dl"
version = "1.9.0"
description = "Multi-threaded downloader for voe.sx and similar video hosting sources"
readme = "README.md"
license = { text = "GPL-3.0-only" }
requires-python = ">=3.8"
dependencies = [
    "requests",
    "beautifulsoup4",
    "yt-dlp",
    "wget",
]

[project.scripts]
voe-dl = "voe_dl.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["voe_dl"]

[dependency-groups]
dev = [
    "pyinstaller>=6.21.0",
]
